# TibiaEyez

./: .gitignore  CMakeLists.txt  README.md
resources/: TibiaEyez.rc  resource.h
src/: Application.cpp  Application.h  Config.cpp  Config.h  ControlPanel.cpp  ControlPanel.h  DwmMirror.cpp  DwmMirror.h  HotkeyManager.cpp  HotkeyManager.h  OverlayWindow.cpp  OverlayWindow.h  TibiaFinder.cpp  TibiaFinder.h  TimerSystem.cpp  TimerSystem.h  main.cpp
